--- a/practica2_fercarm_rodsern/src/uva/ipc/practica2/vista/VistaComprarBillete.form
+++ b/practica2_fercarm_rodsern/src/uva/ipc/practica2/vista/VistaComprarBillete.form
@@ -76,7 +76,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="btn_salir">
           <Properties>
-            <Property name="text" type="java.lang.String" value="SALIR"/>
+            <Property name="text" type="java.lang.String" value="VOLVER AL MEN&#xda;"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Hand Cursor"/>
             </Property>
